# cpp-web-viz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cpp_web_viz/: CMakeLists.txt  main.html  main.js
cpp_web_viz/common/: common.cpp  common.hpp
cpp_web_viz/messaging/: CMakeLists.txt  key_codes.hpp  ping_message.cpp  ping_message.hpp  set_canvas_size_message.cpp  set_canvas_size_message.hpp  set_fps_message.cpp  set_fps_message.hpp  set_keyboard_key_state_message.cpp  set_keyboard_key_state_message.hpp  set_mouse_position_message.cpp  set_mouse_position_message.hpp  set_ping_message.cpp  set_ping_message.hpp  set_renderables_message.cpp  set_renderables_message.hpp
cpp_web_viz/rendering/: CMakeLists.txt  Point.js  Polygon.js  circle.cpp  circle.hpp  circle.js  messages.cpp  messages.hpp  polygon.cpp  polygon.hpp  rendering_server.cpp  rendering_server.hpp  rgba.cpp  rgba.hpp
cpp_web_viz/tests/: CMakeLists.txt
examples/: CMakeLists.txt
examples/box_follow_mouse_position/: CMakeLists.txt  box_follow_mouse_position.cpp  main.cpp
examples/disk_arrow_key_movement/: CMakeLists.txt  disk_arrow_key_movement.cpp
src/: CMakeLists.txt  main.cpp  main.html  main.js
src/common/: CMakeLists.txt  common.cpp  common.hpp
src/rendering/: CMakeLists.txt  messages.cpp  messages.hpp  polygon.cpp  polygon.hpp  rendering_server.cpp  rendering_server.hpp  rgba.cpp  rgba.hpp
src/search/: CMakeLists.txt  searcher.hpp
src/world/: CMakeLists.txt  obstacle.hpp  path.hpp
