add_library(messaging SHARED
  key_codes.hpp
  ping_message.hpp
  ping_message.cpp
  set_canvas_size_message.hpp
  set_canvas_size_message.cpp
  set_fps_message.hpp
  set_fps_message.cpp
  set_keyboard_key_state_message.hpp
  set_keyboard_key_state_message.cpp
  set_mouse_position_message.hpp
  set_mouse_position_message.cpp
  set_renderables_message.hpp
  set_renderables_message.cpp
)
